# axon-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: clippy.yml  fmt.yml  package.yml  unit_test.yml
apm/deploy/: hosts
apm/deploy/roles/agent/vars/: main.yaml
apm/deploy/roles/monitor/vars/: main.yaml
src/: apm.rs  benchmark.rs  constants.rs  docker.rs  interactive.rs  main.rs  sub_command.rs  types.rs  utils.rs
src/assets/: CrossChain.json  ERC1967Proxy.json  MetadataManager.json  MirrorToken.json  apm_monitor_prometheus_template.yaml  apm_monitor_vars_template.yaml  config_template.toml
src/assets/apm/deploy/: Makefile  deploy_monitor_agent.yml
src/assets/apm/deploy/roles/agent/vars/: main.yaml
src/assets/apm/deploy/roles/monitor/tasks/: main.yml
src/assets/apm/monitor/config/elastalert2/rules/: axon-testnet-collector-error.yaml
src/axon_nodes/: config.rs  mod.rs  nodes.rs
src/crosschain_tx/: cells.rs  ckb_context.rs  constants.rs  create_sidechain.rs  helper.rs  mod.rs  schema_helper.rs  scripts.rs  types.rs  utils.rs
src/crosschain_tx/schema/: mod.rs  schema.rs
