[package]
name = "axon-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"

axon-protocol = { git = "https://github.com/axonweb3/axon", package = "axon-protocol" }

ckb-crypto = { version = "0.104", features = ["secp"] }
ckb-fixed-hash-core = "0.104"
ckb-hash = "0.104"
ckb-jsonrpc-types = "=0.104"
ckb-sdk = "2.2"
ckb-types = "0.104"

blake2b-rs = "0.2"
ophelia = "0.3"
ophelia-blst = "0.3"
ophelia-secp256k1 = "0.3"
rand = "0.7"
secp256k1 = { version = "0.20", features = ["recovery"] }
tentacle-secio = "0.5"

contract-address = "0.6"
ethers-core = "0.17"

clap = { version = "3.1", features = ["cargo", "derive"] }
colored = "2.0"
log = { version = "0.4", features = ["std"] }
rustyline = { version = "9.1", features = ["case_insensitive_history_search"] }
simplelog = "0.12"

molecule = "0.7.2"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }

crossbeam-utils = "0.8"
derive_more = "0.99.0"
docker-api = "0.11"
futures = "0.3.1"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["macros"] }
include_dir = "0.7"
